# TrabahoLens

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  OPENROUTER_SETUP.md  README.md  SECURITY.md  assign_ph_stats.py  build_site_data.py  fetch_onet.py  fetch_psa.py  filter_ph_occupations.py  generate_heuristic_scores.py  make_csv_ph.py  occupations_ph.csv  occupations_ph.json  package-lock.json  pipeline_utils.py  prompt.md  pyproject.toml  requirements.txt  retry_failed.py  sample_titles_ai_only.txt  score.py  score_ai_only.py  scores.json  scores_ai_only.json  scores_ai_only_sample.json
data/: onet_occupations.json  ph_occupations_v2.json  ph_occupations_v2_with_stats.json
data/reference/: occupations_seed.json
docs/: openrouter-setup.md
scripts/: assign_ph_stats.py  build_site_data.py  check.py  fetch_onet.py  fetch_psa.py  filter_ph_occupations.py  make_csv_ph.py  score_ai_only.py  serve.py
site/: data.json  index.html
src/trabaholens/: __init__.py  assign_ph_stats.py  build_site_data.py  checks.py  fetch_onet.py  fetch_psa.py  filter_ph_occupations.py  make_csv_ph.py  pipeline_utils.py  score_ai_only.py  serve_site.py  validation.py
tests/: test_validation.py
