[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "trabaholens"
version = "0.1.0"
description = "Philippine job-market AI exposure explorer and data pipeline."
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "openai>=1.0.0",
    "python-dotenv>=1.2.2",
    "requests>=2.31.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
